# OpenSolo-extras

./: .gitattributes  HARDWARE-NOTES.md  README.md
CCS11.1.0.00011_web_linux-x64/: README_FIRST_linux.txt  ccs_setup_11.1.0.00011.run
CCS11.1.0.00011_web_linux-x64/components/: ALL-11.1.0.00011-linux-x64.pak  ARM_CGT_HELP-11.1.0.00011-linux-x64.pak  C2000_CGT_HELP-11.1.0.00011-linux-x64.pak  CCS_DOC-11.1.0.00011-linux-x64.pak  CCS_LAUNCHER-11.1.0.00011-linux-x64.pak  CCS_UTILS-11.1.0.00011-linux-x64.pak  CGT_DEFAULTLIBS_C2800-11.1.0.00011-linux-x64.pak  CGT_DEFAULTLIBS_TMS470-11.1.0.00011-linux-x64.pak  CLOUDAGENT-11.1.0.00011-linux-x64.pak  DMED-11.1.0.00011-linux-x64.pak  DS-11.1.0.00011-linux-x64.pak  DS_FLASH-11.1.0.00011-linux-x64.pak  EMU_BH-11.1.0.00011-linux-x64.pak  EMU_C2000-11.1.0.00011-linux-x64.pak  EMU_C2000_FLASH-11.1.0.00011-linux-x64.pak  EMU_TI-11.1.0.00011-linux-x64.pak  INSTALLER-11.1.0.00011-linux-x64.pak  NODEJS-11.1.0.00011-linux-x64.pak  SEGGER_J_LINK-11.1.0.00011-linux-x64.pak  SYSCONFIG-11.1.0.00011-linux-x64.pak  TARGETDB_DEF_PROPS-11.1.0.00011-linux-x64.pak  TARGET_CONTENT_CORE-11.1.0.00011-linux-x64.pak  TIREX-11.1.0.00011-linux-x64.pak  TIREX4-11.1.0.00011-linux-x64.pak  TI_ARM_CLANG-11.1.0.00011-linux-x64.pak  USERGUIDE-11.1.0.00011-linux-x64.pak  core-11.1.0.00011-linux-x64.pak
oreo-led/: .gitignore  Makefile  README.md  oreoled.atsln  oreoled.cproj
scripts/: .mavinit.scr  solo_update_gimbal.py  solo_update_sololink.sh
solo-gimbal/: .gitignore  README.md  gimbal_firmware_v1.ax
solo_gstreamer/gst-fsl-plugins-3.0.11/src/misc/tvsrc/src/: Makefile.am  Makefile.in  mfw_gst_tvsrc.c  mfw_gst_tvsrc.h  stats_sn_gst.h
solo_gstreamer/gst-fsl-plugins-3.0.11/src/video/vpu/src/: Makefile.am  Makefile.in  vpudec.c  vpudec.h  vpuenc.c  vpuenc.h
(+1006 files in other folders)
